--- a/src/MeuPonto.Desktop/Modules/Empregadores/CadastroEmpregadoresWindow.xaml
+++ b/src/MeuPonto.Desktop/Modules/Empregadores/CadastroEmpregadoresWindow.xaml
@@ -1,13 +1,13 @@
 ﻿<Window
-    x:Class="MeuPonto.Modules.Perfis.CadastroPerfisWindow"
+    x:Class="MeuPonto.Modules.Empregadores.CadastroEmpregadoresWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:MeuPonto.Modules.Perfis"
+    xmlns:empregadores="clr-namespace:MeuPonto.Modules.Empregadores;assembly=MeuPonto.DocumentModel"
+    xmlns:local="clr-namespace:MeuPonto.Modules.Empregadores"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:perfis="clr-namespace:MeuPonto.Modules.Perfis;assembly=MeuPonto.DocumentModel"
     xmlns:system="clr-namespace:System;assembly=System.Xaml.Extensions"
-    Title="Cadastro de Perfis"
+    Title="Cadastro de Empregadores"
     Width="800"
     Height="450"
     Loaded="Window_Loaded"
@@ -15,9 +15,9 @@
     mc:Ignorable="d">
     <Window.Resources>
         <ResourceDictionary>
-            <CollectionViewSource x:Key="perfisViewSource" d:DesignSource="{d:DesignInstance {x:Type perfis:Perfil}, CreateList=True}" />
-            <CollectionViewSource x:Key="semanaViewSource" Source="{Binding JornadaTrabalhoSemanalPrevista.Semana, Source={StaticResource perfisViewSource}}" />
-            <!--<CollectionViewSource x:Key="recursoTiposViewSource" d:DesignSource="{d:DesignInstance {x:Type perfis:PerfilRecursoTipo}, CreateList=False}" />-->
+            <CollectionViewSource x:Key="empregadoresViewSource" d:DesignSource="{d:DesignInstance {x:Type empregadores:Empregador}, CreateList=True}" />
+            <CollectionViewSource x:Key="semanaViewSource" Source="{Binding JornadaTrabalhoSemanalPrevista.Semana, Source={StaticResource empregadoresViewSource}}" />
+            <!--<CollectionViewSource x:Key="recursoTiposViewSource" d:DesignSource="{d:DesignInstance {x:Type empregadores:EmpregadorRecursoTipo}, CreateList=False}" />-->
             <Image x:Key="Save" Source="/Resources/saveHS.png" />
             <Image x:Key="SaveAll" Source="/Resources/saveAllHS.png" />
         </ResourceDictionary>
@@ -31,7 +31,7 @@
         </Grid.RowDefinitions>
         <Menu Grid.ColumnSpan="2" VerticalAlignment="Top">
             <MenuItem AutomationProperties.AutomationId="registroMenuItem" Header="Registro">
-                <MenuItem Header="Novo Perfil ..." />
+                <MenuItem Header="Novo Empregador ..." />
                 <Separator />
                 <MenuItem Header="Salvar" InputGestureText="Ctrl+S" />
                 <Separator />
@@ -39,9 +39,9 @@
             </MenuItem>
         </Menu>
         <ToolBar Grid.Row="1">
-            <Button x:Name="novoPerfilButton" Click="novoPerfilButton_Click">
+            <Button x:Name="novoEmpregadorButton" Click="novoEmpregadorButton_Click">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Novo Perfil ..." />
+                    <TextBlock Text="Novo Empregador ..." />
                 </StackPanel>
             </Button>
             <Separator />
@@ -56,36 +56,29 @@
             Grid.Row="2"
             Grid.ColumnSpan="2"
             Margin="0"
-            DataContext="{StaticResource perfisViewSource}">
+            DataContext="{StaticResource empregadoresViewSource}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="5" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
             <DataGrid
-                x:Name="perfilViewModelDataGrid"
+                x:Name="empregadorViewModelDataGrid"
                 Grid.Row="2"
                 AutoGenerateColumns="False"
-                AutomationProperties.Name="Grade de Perfis"
+                AutomationProperties.Name="Grade de Empregadores"
                 EnableRowVirtualization="False"
                 ItemsSource="{Binding}"
                 RowDetailsVisibilityMode="VisibleWhenSelected"
                 VirtualizingPanel.IsVirtualizing="False">
                 <!--<DataGrid.RowValidationRules>
-                    <local:PerfilValidationRule ValidationStep="UpdatedValue"/>
+                    <local:EmpregadorValidationRule ValidationStep="UpdatedValue"/>
                 </DataGrid.RowValidationRules>-->
                 <DataGrid.Columns>
                     <DataGridTextColumn
-                        x:Name="nomeColumn"
                         Width="150"
-                        AutomationProperties.Name="Nome do Perfil"
                         Binding="{Binding Nome}"
                         Header="Nome" />
-                    <DataGridCheckBoxColumn
-                        x:Name="ativoColumn"
-                        Width="50"
-                        Binding="{Binding Ativo}"
-                        Header="Ativo" />
                     <DataGridTextColumn
                         Width="100"
                         Binding="{Binding TrabalhadorId}"
@@ -108,7 +101,7 @@
                 Grid.RowSpan="2"
                 Grid.Column="2"
                 Margin="0,-9,0,0"
-                Header="Perfil">
+                Header="Empregador">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -120,33 +113,6 @@
                         AutomationProperties.AutomationId="nomeTextBox"
                         AutomationProperties.Name="nomeTextBox"
                         Text="{Binding Nome}" />
-                    <GroupBox
-                        Grid.Row="2"
-                        Margin="0,-2,0,0"
-                        Header="Jornada Trabalho Semanal Prevista">
-                        <GroupBox
-                            Margin="0,-2,0,0"
-                            DataContext="{StaticResource semanaViewSource}"
-                            Header="Semana">
-                            <ItemsControl ItemsSource="{Binding Source={StaticResource semanaViewSource}}">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*" />
-                                                <ColumnDefinition Width="100" />
-                                            </Grid.ColumnDefinitions>
-                                            <Label Content="{Binding DiaSemana}" />
-                                            <TextBox
-                                                Grid.Column="1"
-                                                AutomationProperties.AutomationId="tempoTextBox"
-                                                Text="{Binding Tempo}" />
-                                        </Grid>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-                        </GroupBox>
-                    </GroupBox>
                 </Grid>
             </GroupBox>
         </Grid>
