--- a/src/MeuPonto.Mobile/Modules/Perfis/PerfilPage.xaml
+++ b/src/MeuPonto.Mobile/Modules/Perfis/PerfilPage.xaml
@@ -5,78 +5,116 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="Perfil"
     Loaded="ContentPage_Loaded">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem
-            Command="{Binding SalvarCommand}"
-            IconImageSource="save.png"
-            Order="Primary"
-            Priority="0"
-            Text="Salvar" />
-    </ContentPage.ToolbarItems>
-    <StackLayout Margin="10" Spacing="10">
-        <Label Text="Nome" />
-        <Entry Placeholder="Nome" Text="{Binding Perfil.Nome}" />
-        <Label Text="Ativo" />
-        <CheckBox HorizontalOptions="Start" IsChecked="{Binding Perfil.Ativo}" />
-        <Label Text="Empregador" />
-        <Picker
-            x:Name="empregadoresPicker"
-            Title="Empregador"
-            ItemDisplayBinding="{Binding Nome}"
-            ItemsSource="{Binding Empregadores}"
-            SelectedItem="{Binding Perfil.Empregador}" />
-        <Frame
-            Padding="8"
-            BorderColor="Gray"
-            CornerRadius="5">
+    <ScrollView>
+        <StackLayout Padding="20" Spacing="10">
             <StackLayout>
-                <Label
-                    FontAttributes="Bold"
-                    FontSize="14"
-                    Text="Jornada Trabalho Semanal Prevista" />
-                <BoxView
-                    HeightRequest="1"
-                    HorizontalOptions="Fill"
-                    Color="Gray" />
-                <Frame
-                    Margin="10"
-                    Padding="10"
-                    BorderColor="Gray"
-                    CornerRadius="5">
-                    <StackLayout>
-                        <Label
-                            FontAttributes="Bold"
-                            FontSize="14"
-                            Text="Semana" />
-                        <BoxView
-                            HeightRequest="1"
-                            HorizontalOptions="Fill"
-                            Color="Gray" />
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="100" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Label x:Name="sundayLabel" />
-                            <Entry Grid.Column="1" Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[0].Tempo}" />
-                            <Label x:Name="mondayLabel" Grid.Row="1" />
-                            <Entry
-                                Grid.Row="1"
-                                Grid.Column="1"
-                                Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[1].Tempo}" />
-                        </Grid>
-                    </StackLayout>
-                </Frame>
+                <Label Text="Nome" />
+                <Entry Placeholder="Nome" Text="{Binding Perfil.Nome}" />
             </StackLayout>
-        </Frame>
-    </StackLayout>
+            <StackLayout>
+                <Label Text="Ativo" />
+                <CheckBox HorizontalOptions="Start" IsChecked="{Binding Perfil.Ativo}" />
+            </StackLayout>
+            <StackLayout>
+                <Label Text="Empregador" />
+                <Picker
+                    x:Name="empregadoresPicker"
+                    Title="Empregador"
+                    ItemDisplayBinding="{Binding Nome}"
+                    ItemsSource="{Binding Empregadores}"
+                    SelectedItem="{Binding Perfil.Empregador}" />
+            </StackLayout>
+            <Frame
+                Padding="10"
+                BorderColor="Gray"
+                CornerRadius="5">
+                <StackLayout>
+                    <Label FontAttributes="Bold" Text="Jornada Trabalho Semanal Prevista" />
+                    <!--<BoxView
+                    HeightRequest="2"
+                    HorizontalOptions="Fill"
+                    Color="Gray" />-->
+                    <Frame
+                        Margin="10"
+                        Padding="10"
+                        BorderColor="Gray"
+                        CornerRadius="5">
+                        <StackLayout>
+                            <Label FontAttributes="Bold" Text="Semana" />
+                            <!--<BoxView
+                            HeightRequest="2"
+                            HorizontalOptions="Fill"
+                            Color="Gray" />-->
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="100" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Label x:Name="sundayLabel" VerticalOptions="Center" />
+                                <Entry Grid.Column="1" Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[0].Tempo}" />
+                                <Label
+                                    x:Name="mondayLabel"
+                                    Grid.Row="1"
+                                    VerticalOptions="Center" />
+                                <Entry
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[1].Tempo}" />
+                                <Label
+                                    x:Name="tuesdayLabel"
+                                    Grid.Row="2"
+                                    VerticalOptions="Center" />
+                                <Entry
+                                    Grid.Row="2"
+                                    Grid.Column="1"
+                                    Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[2].Tempo}" />
+                                <Label
+                                    x:Name="wednesdayLabel"
+                                    Grid.Row="3"
+                                    VerticalOptions="Center" />
+                                <Entry
+                                    Grid.Row="3"
+                                    Grid.Column="1"
+                                    Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[3].Tempo}" />
+                                <Label
+                                    x:Name="thursdayLabel"
+                                    Grid.Row="4"
+                                    VerticalOptions="Center" />
+                                <Entry
+                                    Grid.Row="4"
+                                    Grid.Column="1"
+                                    Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[4].Tempo}" />
+                                <Label
+                                    x:Name="fridayLabel"
+                                    Grid.Row="5"
+                                    VerticalOptions="Center" />
+                                <Entry
+                                    Grid.Row="5"
+                                    Grid.Column="1"
+                                    Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[5].Tempo}" />
+                                <Label
+                                    x:Name="saturdayLabel"
+                                    Grid.Row="6"
+                                    VerticalOptions="Center" />
+                                <Entry
+                                    Grid.Row="6"
+                                    Grid.Column="1"
+                                    Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[6].Tempo}" />
+                            </Grid>
+                        </StackLayout>
+                    </Frame>
+                </StackLayout>
+            </Frame>
+            <Button Command="{Binding SalvarCommand}" Text="Salvar" />
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
