--- a/src/MeuPonto.Mobile/Modules/Pontos/RegistroPontosPage.xaml
+++ b/src/MeuPonto.Mobile/Modules/Pontos/RegistroPontosPage.xaml
@@ -5,56 +5,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="Registro de Pontos"
     Loaded="ContentPage_Loaded">
-    <ContentPage.Resources>
-        <Style x:Key="AdaptiveTriggerPageStyle" TargetType="StackLayout">
-            <Setter Property="VisualStateManager.VisualStateGroups">
-                <VisualStateGroupList>
-                    <VisualStateGroup>
-                        <VisualState x:Name="Vertical">
-                            <VisualState.StateTriggers>
-                                <AdaptiveTrigger MinWindowWidth="0" />
-                            </VisualState.StateTriggers>
-                            <VisualState.Setters>
-                                <Setter Property="Orientation" Value="Vertical" />
-                            </VisualState.Setters>
-                        </VisualState>
-                        <VisualState x:Name="Horizontal">
-                            <VisualState.StateTriggers>
-                                <AdaptiveTrigger MinWindowWidth="800" />
-                            </VisualState.StateTriggers>
-                            <VisualState.Setters>
-                                <Setter Property="Orientation" Value="Horizontal" />
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateGroupList>
-            </Setter>
-        </Style>
-        <Style x:Key="DeviceStateTriggerPageStyle" TargetType="ContentPage">
-            <Setter Property="VisualStateManager.VisualStateGroups">
-                <VisualStateGroupList>
-                    <VisualStateGroup>
-                        <VisualState x:Name="Windows">
-                            <VisualState.StateTriggers>
-                                <DeviceStateTrigger Device="Windows" />
-                            </VisualState.StateTriggers>
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="Silver" />
-                            </VisualState.Setters>
-                        </VisualState>
-                        <VisualState x:Name="Android">
-                            <VisualState.StateTriggers>
-                                <DeviceStateTrigger Device="Android" />
-                            </VisualState.StateTriggers>
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="#2196F3" />
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateGroupList>
-            </Setter>
-        </Style>
-    </ContentPage.Resources>
     <ContentPage.ToolbarItems>
         <ToolbarItem
             IconImageSource="add_circle.png"
@@ -76,8 +26,11 @@
             Text="Comprovantes" />
     </ContentPage.ToolbarItems>
     <StackLayout Margin="10">
-        <ListView ItemsSource="{Binding Pontos}" VerticalOptions="FillAndExpand">
-            <ListView.ItemTemplate>
+        <CollectionView
+            EmptyView="Não há registro de pontos."
+            ItemsSource="{Binding Pontos}"
+            VerticalOptions="FillAndExpand">
+            <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <Grid Padding="10">
@@ -108,7 +61,7 @@
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </StackLayout>
 </ContentPage>
