--- a/src/MeuPonto.Mobile/Modules/Perfis/PerfilPage.xaml
+++ b/src/MeuPonto.Mobile/Modules/Perfis/PerfilPage.xaml
@@ -3,13 +3,21 @@
     x:Class="MeuPonto.Modules.Perfis.PerfilPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     Title="Perfil"
     Loaded="ContentPage_Loaded">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem
+            Command="{Binding ExcluirCommand}"
+            Order="Secondary"
+            Priority="0"
+            Text="Excluir" />
+    </ContentPage.ToolbarItems>
     <ScrollView>
         <StackLayout Padding="20" Spacing="10">
             <StackLayout>
                 <Label Text="Nome" />
-                <Entry Placeholder="Nome" Text="{Binding Perfil.Nome}" />
+                <Entry Text="{Binding Perfil.Nome}" />
             </StackLayout>
             <StackLayout>
                 <Label Text="Ativo" />
@@ -19,33 +27,21 @@
                 <Label Text="Empregador" />
                 <Picker
                     x:Name="empregadoresPicker"
-                    Title="Empregador"
                     ItemDisplayBinding="{Binding Nome}"
                     ItemsSource="{Binding Empregadores}"
                     SelectedItem="{Binding Perfil.Empregador}" />
             </StackLayout>
-            <Frame
-                Padding="10"
-                BorderColor="Gray"
-                CornerRadius="5">
-                <StackLayout>
-                    <Label FontAttributes="Bold" Text="Jornada Trabalho Semanal Prevista" />
-                    <!--<BoxView
-                    HeightRequest="2"
-                    HorizontalOptions="Fill"
-                    Color="Gray" />-->
-                    <Frame
-                        Margin="10"
-                        Padding="10"
-                        BorderColor="Gray"
-                        CornerRadius="5">
-                        <StackLayout>
-                            <Label FontAttributes="Bold" Text="Semana" />
-                            <!--<BoxView
-                            HeightRequest="2"
-                            HorizontalOptions="Fill"
-                            Color="Gray" />-->
-                            <Grid>
+            <Frame>
+                <toolkit:Expander Margin="0,0,0,2" IsExpanded="True">
+                    <toolkit:Expander.Header>
+                        <Label FontAttributes="Bold" Text="Jornada Trabalho Semanal Prevista" />
+                    </toolkit:Expander.Header>
+                    <Frame Margin="0,20,0,0">
+                        <toolkit:Expander Margin="0,0,0,2" IsExpanded="True">
+                            <toolkit:Expander.Header>
+                                <Label FontAttributes="Bold" Text="Semana" />
+                            </toolkit:Expander.Header>
+                            <Grid Margin="0,20,0,0" RowSpacing="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="100" />
@@ -110,9 +106,9 @@
                                     Grid.Column="1"
                                     Text="{Binding Perfil.JornadaTrabalhoSemanalPrevista.Semana[6].Tempo}" />
                             </Grid>
-                        </StackLayout>
+                        </toolkit:Expander>
                     </Frame>
-                </StackLayout>
+                </toolkit:Expander>
             </Frame>
             <Button Command="{Binding SalvarCommand}" Text="Salvar" />
         </StackLayout>
