--- a/src/MeuPonto.Mobile/Resources/Styles/Colors.xaml
+++ b/src/MeuPonto.Mobile/Resources/Styles/Colors.xaml
@@ -2,8 +2,8 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <Color x:Key="Primary">#0D6EFD</Color>
-    <Color x:Key="Secondary">#212529bf</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Secondary">#FFECB3</Color>
+    <Color x:Key="Tertiary">#0245A9</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
