build: atualiza .net pra versão 7

--- a/src/MeuPonto.Mobile/MainPage.xaml
+++ b/src/MeuPonto.Mobile/MainPage.xaml
@@ -1,52 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
-    x:Class="MeuPonto.MainPage"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="MeuPonto.MainPage">
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
             Spacing="25"
+            Padding="30,0"
             VerticalOptions="Center">
 
-            <Button
-                ContentLayout="Left"
-                HorizontalOptions="Center"
-                ImageSource="fingerprint.png"
-                Text="Marcar Ponto" />
-
-            <Button
-                ContentLayout="Left"
-                HorizontalOptions="Center"
-                ImageSource="qr_code.png"
-                Text="Guardar Comprovante" />
-
             <Image
-                HeightRequest="200"
-                HorizontalOptions="Center"
+                Source="dotnet_bot.png"
                 SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                Source="dotnet_bot.png" />
+                HeightRequest="200"
+                HorizontalOptions="Center" />
 
             <Label
-                FontSize="32"
-                HorizontalOptions="Center"
+                Text="Hello, World!"
                 SemanticProperties.HeadingLevel="Level1"
-                Text="Hello, World!" />
+                FontSize="32"
+                HorizontalOptions="Center" />
 
             <Label
-                FontSize="18"
-                HorizontalOptions="Center"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
+                Text="Welcome to .NET Multi-platform App UI"
                 SemanticProperties.HeadingLevel="Level2"
-                Text="Welcome to .NET Multi-platform App UI" />
+                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
+                FontSize="18"
+                HorizontalOptions="Center" />
 
             <Button
                 x:Name="CounterBtn"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center"
+                Text="Click me"
                 SemanticProperties.Hint="Counts the number of times you click"
-                Text="Click me" />
+                Clicked="OnCounterClicked"
+                HorizontalOptions="Center" />
 
         </VerticalStackLayout>
     </ScrollView>
