--- a/src/MeuPonto.Mobile/Resources/Styles/Styles.xaml
+++ b/src/MeuPonto.Mobile/Resources/Styles/Styles.xaml
@@ -2,7 +2,7 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Style x:Key="AdaptiveTriggerPageStyle" TargetType="StackLayout">
+    <Style x:Key="AdaptiveTriggerStyle" TargetType="StackLayout">
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup>
@@ -26,7 +26,7 @@
             </VisualStateGroupList>
         </Setter>
     </Style>
-    <Style x:Key="DeviceStateTriggerPageStyle" TargetType="ContentPage">
+    <Style x:Key="DeviceStateTriggerStyle" TargetType="ContentPage">
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup>
